--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,7 +2,7 @@
     <ul>
     {% for poll in latest_poll_list %}
         <li><a href="{% url 'detail' poll.id %}">{{ poll.question }}</a></li>
-        <li><a href="{% url 'polls:detail' poll.id %}:>{{ poll.question }}</a></li>
+    {% endfor %}
     </ul>
 {% else %}
     <p>No polls are available.</p>
